# final-year

./: .gitignore  Dockerfile  README.md  SETUP_GUIDE.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  README.md  config.py  main.py  pyproject.toml  requirements.txt  schemas.py  utils.py
backend/routes/: calendar.py  drive.py  gmail.py
backend/services/: ai_summary.py  oauth_handler.py
backend/tests/: test_main.py  test_utils.py
frontend/: README.md  index.html  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ErrorBoundary.jsx  Header.jsx  Layout.jsx  Sidebar.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: CalendarInsights.jsx  Dashboard.jsx  DriveOrganizer.jsx  EmailSummary.jsx  Login.jsx
